test/cases/pos/0012_mod.ul
int x = (4 * 3 + 6) % 7;
