test/cases/neg/0012b_bad_expr.ul
int x = (4 * 2 + 3;
